workflows/01_competitive_offers_ai_extraction/tests/test.txt
  File "<ipython-input-40-d16331167114>", line 595
    "pattern": r"post-paid bts\s*
               ^
SyntaxError: unterminated string literal (detected at line 595)
